# voltorb-flip

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pylintrc  Makefile  pyproject.toml  readme.md
.github/workflows/: ci.yml
tests/: test_game.py  test_levels.py  test_voltorb_flip.py
tmp/: pyproject.toml
voltorb_flip/: __main__.py  console.py  game.py  levels.py
