[tool.poetry]
name = "voltorb-flip"
version = "1.0.0"
description = "A minigame of the Goldenrod and Celadon Game Corners in the Korean and Western releases of Pokémon HeartGold and SoulSilver."
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]
advbumpversion = "^1.2.0"
bandit = "^1.7.4"
black = "^22.1.0"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
